// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse panel work header work 1`] = `
"<div class=\\"ix-collapse\\">
  <div class=\\"ix-collapse-panel\\">
    <div class=\\"ix-header ix-header-md\\">
      <div class=\\"ix-header-content\\">
        <div class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right\\" role=\\"img\\" aria-label=\\"right\\"></i></div>
        <!----><span class=\\"ix-header-title\\">header 0</span>
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <transition-stub>
      <div class=\\"ix-collapse-panel-content\\" style=\\"display: none;\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`Collapse panel work header work 2`] = `
"<div class=\\"ix-collapse\\">
  <div class=\\"ix-collapse-panel\\">
    <div class=\\"ix-header ix-header-md\\">
      <div class=\\"ix-header-content\\">
        <div class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right\\" role=\\"img\\" aria-label=\\"right\\"><svg viewBox=\\"64 64 896 896\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" fill=\\"currentColor\\" aria-hidden=\\"true\\" data-icon=\\"right\\" style=\\"transform: rotate(0deg)\\">
              <path d=\\"m728.896 521.024-388.48 388.544a12.8 12.8 0 0 1-18.176 0l-27.136-27.136a12.8 12.8 0 0 1 0-18.112L638.4 521.024a12.8 12.8 0 0 0 0-18.048L295.04 159.68a12.8 12.8 0 0 1 0-18.112l27.136-27.136a12.8 12.8 0 0 1 18.112 0l388.48 388.48a12.8 12.8 0 0 1 0 18.112z\\"></path>
            </svg></i></div>
        <!----><span class=\\"ix-header-title\\">hello header</span>
        <!---->
        <div class=\\"ix-header-suffix\\"><i class=\\"ix-icon ix-icon-left\\" role=\\"img\\" aria-label=\\"left\\"><svg viewBox=\\"64 64 896 896\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" fill=\\"currentColor\\" aria-hidden=\\"true\\" data-icon=\\"left\\">
              <path d=\\"m295.104 502.976 388.48-388.544a12.8 12.8 0 0 1 18.176 0l27.136 27.136a12.8 12.8 0 0 1 0 18.112L385.6 502.976a12.8 12.8 0 0 0 0 18.048L728.896 864.32a12.8 12.8 0 0 1 0 18.112l-27.136 27.136a12.8 12.8 0 0 1-18.112 0l-388.48-388.48a12.8 12.8 0 0 1 0-18.112z\\"></path>
            </svg></i></div>
      </div>
      <!---->
    </div>
    <transition-stub>
      <div class=\\"ix-collapse-panel-content\\" style=\\"display: none;\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`Collapse render work 1`] = `
"<div class=\\"ix-collapse\\">
  <div class=\\"ix-collapse-panel\\">
    <div class=\\"ix-header ix-header-md\\">
      <div class=\\"ix-header-content\\">
        <div class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right\\" role=\\"img\\" aria-label=\\"right\\"></i></div>
        <!----><span class=\\"ix-header-title\\">header 0</span>
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <transition-stub>
      <div class=\\"ix-collapse-panel-content\\" style=\\"display: none;\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"ix-collapse-panel ix-collapse-panel-expanded\\">
    <div class=\\"ix-header ix-header-md\\">
      <div class=\\"ix-header-content\\">
        <div class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right\\" role=\\"img\\" aria-label=\\"right\\"></i></div>
        <!----><span class=\\"ix-header-title\\">header 1</span>
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <transition-stub>
      <div class=\\"ix-collapse-panel-content\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"ix-collapse-panel\\">
    <div class=\\"ix-header ix-header-md\\">
      <div class=\\"ix-header-content\\">
        <div class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right\\" role=\\"img\\" aria-label=\\"right\\"></i></div>
        <!----><span class=\\"ix-header-title\\">header 2</span>
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <transition-stub>
      <div class=\\"ix-collapse-panel-content\\" style=\\"display: none;\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;
